objects/Contact.object
<CustomObject
     >
    <fields>
        <fullName>ABN_Trained__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NS:07/19/18 This field is checked once they have trained the clients regarding ABNs.</description>
        <label>ABN Trained?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AE_Notified_Physician_Churned__c</fullName>
        <inlineHelpText>Updates when the physician&apos;s last sample submitted was more than 30 days ago.</inlineHelpText>
        <label>AE Notified/Physician Churned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ALSD__c</fullName>
        <description>Updated by PB &apos;Contact: Update Touch Dates&apos;</description>
        <inlineHelpText>Hidden field used to mask &apos;Account: Last Call Date&apos;</inlineHelpText>
        <label>ALCD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASCO_RSVP__c</fullName>
        <label>ASCO RSVP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASCO_Reception_Attendee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ASCO Reception Attendee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accession__c</fullName>
        <description>NS:06/20/18: This field contains the information about Accession number. We are using this field in email template(1st Sample Physician Notice)</description>
        <formula>Last_Sample__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accession #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_AM_Owner_Email__c</fullName>
        <label>Account AM Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_AM_Owner__c</fullName>
        <formula>TEXT(Account.AM_Owner_list__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account AM Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_BD_Owner_Email__c</fullName>
        <label>Account BD Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_BD_Owner__c</fullName>
        <formula>TEXT( Account.BD_Owner_list__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account BD Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Classification__c</fullName>
        <formula>TEXT( Account.Industry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Contact_Name__c</fullName>
        <formula>Account.Name &amp; &quot; - &quot; &amp;  Full_Name__c</formula>
        <label>Account - Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Contact_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Workflow will trigger Email notification once (Account Updated) box is Checked.</description>
        <label>Account Contact Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Integration_Commitment_Date__c</fullName>
        <description>Need to fix this. This should be a formula field b/c otherwise it can&apos;t be calculated on Care Team Member records</description>
        <label>Account Integration Commitment Dte</label>
        <summarizedField>Account_Integration_Tasks__c.Date_Completed__c</summarizedField>
        <summaryFilterItems>
            <field>Account_Integration_Tasks__c.Integration_Question__c</field>
            <operation>equals</operation>
            <value>a0f0y00000EB4XaAAL,a0f0y00000EB4XbAAL</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Account_Integration_Tasks__c.Date_Completed__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Account_Integration_Tasks__c.Physician__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Account_Integration_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED. Use &apos;Account Integration Target&apos; (GRO_Tool__c) instead.</description>
        <label>Acct Integration Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Last_Call_Date__c</fullName>
        <formula>CASE(Integration_Contact_Type__c,
&quot;Care Team Member&quot;,Care_Team_Member__r.ALSD__c,
ALSD__c)</formula>
        <inlineHelpText>Most recent &quot;inservice&quot; or &quot;staff 1:1&quot; task completed on the contact specified in the &apos;Physician Affiliation&apos; field.</inlineHelpText>
        <label>Account Last Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_MSL__c</fullName>
        <formula>TEXT( Account.MSL__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account MSL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_ID__c</fullName>
        <formula>Account.Account_Owner_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account.Owner.FirstName+&apos; &apos;+Account.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Qualified__c</fullName>
        <formula>Account.Qualified__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>TEXT (Account.Account_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_in_LIMS__c</fullName>
        <formula>NOT(ISBLANK(Account.Sent_to_LIMS__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account in LIMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_is_ISR_Target__c</fullName>
        <formula>Account.ISR_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account is ISR Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_is_NCI__c</fullName>
        <formula>IF(
OR(
Account.Designated_NCI_Center__c=TRUE,
Account.Parent.Designated_NCI_Center__c=TRUE), 
TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>YES if contact&apos;s account or parent account is NCI</inlineHelpText>
        <label>Account is NCI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Acct_Integration_Commitment_Date__c</fullName>
        <formula>CASE (TEXT(Integration_Contact_Type__c),
  &quot;Physician&quot;, Account_Integration_Commitment_Date__c,
  &quot;Care Team Member&quot;,Care_Team_Member__r.Account_Integration_Commitment_Date__c, 
  DATEVALUE(&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Integration Commitment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ActualNPINumber__c</fullName>
        <formula>Actual_NPI__r.NPI_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ActualNPI Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_NPI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The NPI associated with this practitioner- regardless of how many contact records are associated.</inlineHelpText>
        <label>Actual NPI</label>
        <referenceTo>NPI_Records__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>NPI_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Affiliate_Account_match__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Qualified Affiliate Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affiliation__c</fullName>
        <label>Affiliation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NCI</fullName>
                </value>
                <value>
                    <fullName>NCCN</fullName>
                </value>
                <value>
                    <fullName>NCI &amp; NCCN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alternative_Phone__c</fullName>
        <description>Force-BP, Force-CTA, or UE users can capture on the contact record an alternative phone number that do not conflict with the phone information that Client Services has entered into the contact record.</description>
        <inlineHelpText>Secondary number where contact can be reached</inlineHelpText>
        <label>Alternative Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Another_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Another checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apr_Samples__c</fullName>
        <label>Apr Samples</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_RD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned RD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regional_Director</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assistant_Email__c</fullName>
        <label>Assistant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Aug_Samples__c</fullName>
        <label>Aug Samples</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Days_between_First_and_Next_Sample__c</fullName>
        <formula>Second_Sample_Date__c  -  First_Sample_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg Days between First and Next Sample</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Time_Between_Samples__c</fullName>
        <formula>(Last_Sample_Date__c - First_Sample_Date__c) / Number_of_Samples__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Difference in Days between first and last sample dates, divided by the number of samples</inlineHelpText>
        <label>Avg Days Between Samples</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPID__c</fullName>
        <label>BPID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRAF_Email_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BRAF Email Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRAF_Email_V1_Sent__c</fullName>
        <label>BRAF Email V1 Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRAF_Email__c</fullName>
        <formula>Count_of_X__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRAF Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Best_Quintile__c</fullName>
        <label>Best Quintile</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birth_Year__c</fullName>
        <label>Birth Year</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Breast_Prescriber__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Breast Prescriber</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH1_Promo_Exceeded_Notification_Date__c</fullName>
        <label>CH1 Promo Exceeded Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMS_East__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CMS East</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMS_Study_Enrollment__c</fullName>
        <label>CMS Study Enrollment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMS_Study__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CMS West</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COS_Key_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used by Clinical Oncology Specialists.</inlineHelpText>
        <label>COS Key Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRC_Prescriber__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CRC Prescriber</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_POC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Best point of contact for Client Services to reach out to regarding kit supplies</description>
        <label>CS POC</label>
        <referenceTo>ISR_Contact__c</referenceTo>
        <relationshipLabel>Contacts (CS POC)</relationshipLabel>
        <relationshipName>Client_Services_POC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTA_Contact_Name__c</fullName>
        <formula>CTA_Owner_user__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CTA Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTA_Owner_user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CTA Contact Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Force-BioPharma CTA</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancelled_Report_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled Report Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Care_Team_Member_Roles__c</fullName>
        <label>Care Team Member Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Care_Team_Member_Roles</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Care_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Physician Affiliation(Lookup to Physician Contact)</inlineHelpText>
        <label>Physician Affiliation</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Care Team Member)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Safe_Contact_ID__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Safe Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Churned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Churned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <label>Commission</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commitment_Date__c</fullName>
        <label>Commitment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Counter__c</fullName>
        <description>This field is for reports in order to allow counting up the number of contacts in a report formula.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_ID__c</fullName>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_Profile_ID__c</fullName>
        <formula>Owner.ProfileId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Owner Profile ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <label>Contact Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative Assistant</fullName>
                </value>
                <value>
                    <fullName>Billing Specialist</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Case Manager</fullName>
                </value>
                <value>
                    <fullName>CEO/COO</fullName>
                </value>
                <value>
                    <fullName>Certified Nurse Assistant</fullName>
                </value>
                <value>
                    <fullName>Clinical Trials Manager</fullName>
                </value>
                <value>
                    <fullName>Cytologist/Cytotechnologist</fullName>
                </value>
                <value>
                    <fullName>General MD</fullName>
                </value>
                <value>
                    <fullName>Genetic Counselor</fullName>
                </value>
                <value>
                    <fullName>Gynecologic Oncologist</fullName>
                </value>
                <value>
                    <fullName>Hematologist</fullName>
                </value>
                <value>
                    <fullName>Hematology/Oncology</fullName>
                </value>
                <value>
                    <fullName>Internist</fullName>
                </value>
                <value>
                    <fullName>Interventional Radiologist</fullName>
                </value>
                <value>
                    <fullName>Lab Manager</fullName>
                </value>
                <value>
                    <fullName>Lab Person</fullName>
                </value>
                <value>
                    <fullName>Medical Assistant</fullName>
                </value>
                <value>
                    <fullName>Medical Oncologist</fullName>
                </value>
                <value>
                    <fullName>Nurse</fullName>
                </value>
                <value>
                    <fullName>Nurse Navigator</fullName>
                </value>
                <value>
                    <fullName>Nurse Practitioner</fullName>
                </value>
                <value>
                    <fullName>Nursing Manager</fullName>
                </value>
                <value>
                    <fullName>Office Manager</fullName>
                </value>
                <value>
                    <fullName>Office Staff</fullName>
                </value>
                <value>
                    <fullName>Oncological Urologist</fullName>
                </value>
                <value>
                    <fullName>Oncology Nurse</fullName>
                </value>
                <value>
                    <fullName>Pathologist</fullName>
                </value>
                <value>
                    <fullName>Pediatric Oncologist</fullName>
                </value>
                <value>
                    <fullName>Pharmacist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Moved</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Research Account</fullName>
                </value>
                <value>
                    <fullName>Clinical Account</fullName>
                </value>
                <value>
                    <fullName>Clinical Trial Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_URL__c</fullName>
        <formula>&apos;https://na66.salesforce.com/&apos; &amp; Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <displayFormat>GHC-{000000000}</displayFormat>
        <externalId>true</externalId>
        <label>Contact #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Count_of_Breast_Cancer_Type__c</fullName>
        <label>Count of Breast Cancer Type</label>
        <summaryFilterItems>
            <field>Guardant_360_Sample__c.Cancer_Class__c</field>
            <operation>contains</operation>
            <value>Breast</value>
        </summaryFilterItems>
        <summaryForeignKey>Guardant_360_Sample__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Lung_Cancer_Type__c</fullName>
        <label>Count of Lung Cancer Type</label>
        <summaryFilterItems>
            <field>Guardant_360_Sample__c.Cancer_Class__c</field>
            <operation>contains</operation>
            <value>Lung</value>
        </summaryFilterItems>
        <summaryForeignKey>Guardant_360_Sample__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Matches_Identified__c</fullName>
        <label>Count of Matches Identified</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Medicare_Samples__c</fullName>
        <label>Count of Medicare Samples</label>
        <summaryFilterItems>
            <field>Guardant_360_Sample__c.Billing_Type__c</field>
            <operation>equals</operation>
            <value>Medicare</value>
        </summaryFilterItems>
        <summaryForeignKey>Guardant_360_Sample__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Open_Matches__c</fullName>
        <label>Count of Open Matches</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Signed_TRFs__c</fullName>
        <description>Count of samples with PBA signed.</description>
        <label>Count of Signed TRFs</label>
        <summarizedField>Guardant_360_Sample__c.Sample_Count__c</summarizedField>
        <summaryFilterItems>
            <field>Guardant_360_Sample__c.Pt_Benefits_Authorization__c</field>
            <operation>equals</operation>
            <value>Signed</value>
        </summaryFilterItems>
        <summaryForeignKey>Guardant_360_Sample__c.Contact__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_X__c</fullName>
        <description>Filters the # of samples to specific cancer types, received after a specific date. 
Modify this filter criteria as needed.</description>
        <label>Count of X</label>
        <summarizedField>Guardant_360_Sample__c.Sample_Count__c</summarizedField>
        <summaryFilterItems>
            <field>Guardant_360_Sample__c.Cancer_Type__c</field>
            <operation>equals</operation>
            <value>Lung squamous cell carcinoma,Lung adenocarcinoma,Non-small cell lung carcinoma (NSCLC),Lung cancer</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Guardant_360_Sample__c.Date_Received__c</field>
            <operation>greaterOrEqual</operation>
            <value>3/15/2017</value>
        </summaryFilterItems>
        <summaryForeignKey>Guardant_360_Sample__c.Contact__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Courtesy_Call_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>See ENT-3974</description>
        <inlineHelpText>If checked, this MD does not want to receive courtesy calls from Med Affairs, or belongs to an NCCN account</inlineHelpText>
        <label>Courtesy Call Opt-Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credentials__c</fullName>
        <label>Credentials</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cumulative_Expenses__c</fullName>
        <description>Stark Law</description>
        <formula>Actual_NPI__r.Expense_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Year Expense Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <description>Used primarily for GH Speakers</description>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DO_NOT_CONTACT__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>BioPharma</inlineHelpText>
        <label>DO NOT CONTACT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_ABN_Trained__c</fullName>
        <description>NS:07/19/18: This field is populated with today&apos;s date once the ABN Trained check box is checked.</description>
        <label>Date ABN Trained</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Address_Last_Changed__c</fullName>
        <description>Records when address, phone #, name, email, or fax was last changed</description>
        <label>Date Address Last Changed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Last_Contacted__c</fullName>
        <inlineHelpText>Date last contacted regarding a Match Record.</inlineHelpText>
        <label>Date Last Contacted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Qualification_Requested__c</fullName>
        <inlineHelpText>Date an ISR requested qualification for this contact.</inlineHelpText>
        <label>Date Qualification Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Record_Last_Changed__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Used to trigger changes of relevant ERP Customer data via middleware.</description>
        <inlineHelpText>Used to trigger changes of relevant ERP Customer data via middleware.</inlineHelpText>
        <label>Date Record Last Changed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_ISR_Call__c</fullName>
        <inlineHelpText>This is the last date an ISR made a call to this contact&apos;s office and either spoke to someone or left a voicemail.</inlineHelpText>
        <label>Date of Last ISR Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Between_Created_1st_Sample__c</fullName>
        <formula>First_Sample_Date__c - DATEVALUE (CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Between Created &amp; 1st Sample</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Between_Qualified_1st_Sample__c</fullName>
        <formula>IF(ISBLANK(First_Sample_Date__c),TODAY()-  Training_Date__c , 
(First_Sample_Date__c) - (Training_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Between Qualified &amp; 1st Sample</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Sample__c</fullName>
        <formula>TODAY() - Last_Sample_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Sample</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dec_Samples__c</fullName>
        <label>Dec Samples</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_Report_Type__c</fullName>
        <label>Delivery Report Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Portal</fullName>
                </value>
                <value>
                    <fullName>Courier</fullName>
                </value>
                <value>
                    <fullName>Portal and Fax</fullName>
                </value>
                <value>
                    <fullName>Both Email and Fax</fullName>
                    <isActive>false</isActive>
                    <label>Both Email and Fax</label>
                </value>
                <value>
                    <fullName>Fax &amp; Portal</fullName>
                    <isActive>false</isActive>
                    <label>Fax &amp; Portal</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_not_send_IOE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not send IOE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_VOD__c</fullName>
        <label>Email (VOD)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Erlotinib_Patients_Decile__c</fullName>
        <label>Erlotinib Patients Decile</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Decile 1</fullName>
                </value>
                <value>
                    <fullName>Decile 2</fullName>
                </value>
                <value>
                    <fullName>Decile 3</fullName>
                </value>
                <value>
                    <fullName>Decile 4</fullName>
                </value>
                <value>
                    <fullName>Decile 5</fullName>
                </value>
                <value>
                    <fullName>Decile 6</fullName>
                </value>
                <value>
                    <fullName>Decile 7</fullName>
                </value>
                <value>
                    <fullName>Decile 8</fullName>
                </value>
                <value>
                    <fullName>Decile 9</fullName>
                </value>
                <value>
                    <fullName>Decile 10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Erlotinib_Patients__c</fullName>
        <label>Erlotinib Patients</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>